Adds extra require for tests

--- a/buildout/travis.cfg
+++ b/buildout/travis.cfg
@@ -6,6 +6,9 @@ parts =
     install
     test
 
+develop =
+    .
+
 eggs-directory = buildout-cache/eggs
 download-cache = buildout-cache/downloads
 
@@ -15,9 +18,17 @@ allow-hosts =
     *.plone.org
     *.python.org
     *.zope.org
+    *.github.com
+    buildout.org
+    bitbucket.org
     docutils.sourceforge.net
     effbot.org
     prdownloads.sourceforge.net
+
+[plone]
+eggs =
+    Pillow
+    seantis.dir.facility[tests]
 
 [download]
 recipe = hexagonit.recipe.download
