--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
+
 python: "2.7"
+
 install:
     - pip install psycopg2
     - cp buildout/* .
@@ -8,7 +10,13 @@ install:
     - mkdir -p buildout-cache/downloads
     - python bootstrap.py -c travis.cfg
     - bin/buildout -N -t 3 -c travis.cfg
+
 before_script:
     - psql -c 'create database reservations;' -U postgres
     - echo 'testdsn = "postgresql+psycopg2://postgres@127.0.0.1:5432/reservations"' >src/seantis.reservation/seantis/reservation/test_database.py
-script: bin/test -s seantis.dir.facility
+
+script: bin/coverage bin/test -s seantis.dir.facility
+
+after_success:
+    - pip install coveralls
+    - coveralls
