Update test configuration

--- a/buildout/buildout.cfg
+++ b/buildout/buildout.cfg
@@ -1,19 +1,21 @@
 [buildout]
-extensions = 
+extensions =
     buildout.bootstrap
     mr.developer
+    buildout.dumppickedversions
 
 develop =
     .
     ./src/*
 auto-checkout = *
 
-extends = 
-    http://dist.plone.org/release/4.3/versions.cfg
+extends =
+    http://dist.plone.org/release/4.3.7/versions.cfg
     versions.cfg
     sources.cfg
 
-find-links = 
+extends-cache = .
+find-links =
     http://dist.plone.org/thirdparty/
 
 parts =
@@ -30,9 +32,9 @@ eggs =
 
 [instance]
 recipe = plone.recipe.zope2instance
-eggs = 
+eggs =
     ${plone:eggs}
-environment-vars = 
+environment-vars =
     zope_i18n_compile_mo_files true
 
 [i18ndude]
