--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,7 @@ script: bin/coverage run bin/test -s seantis.dir.facility
 
 after_success:
     - pip install coveralls
+    - python -m coverage.pickle2json
     - coveralls
+
+sudo: false
